# telecom-customer-intelligence-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-nlp.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py
app/pages/: 1_Customer_360.py  2_Complaint_Analysis.py
data/demo/: classified_support_tickets_demo.parquet  customer_churn_explanations_demo.parquet  customer_features_demo.parquet  customer_risk_scores_demo.parquet
docs/: architecture.md  data_dictionary.md  data_model.md  deployment.md  docker.md  model_card.md
scripts/: build_demo_data.py  check_sql_files.py  profile_source_data.py
sql/models/: customer_360.sql  kpi_summary.sql
sql/schema/: 001_create_core_tables.sql
src/telecom_intelligence/features/: build_customer_features.py
src/telecom_intelligence/ingestion/: clean_customers.py
src/telecom_intelligence/ml/: explain_churn_predictions.py  score_customers.py  train_churn_models.py
src/telecom_intelligence/nlp/: classify_complaints.py
src/telecom_intelligence/synthetic/: generate_telecom_data.py
tests/unit/: test_build_customer_features.py  test_classify_complaints.py  test_clean_customers.py  test_explain_churn_predictions.py  test_generate_telecom_data.py  test_score_customers.py  test_train_churn_models.py
